--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -25,7 +25,7 @@ There are many servers and tools that expose an OpenAI-compatible API. Pick whic
 - **Cloud Providers**: [Groq](https://groq.com/), [Mistral AI](https://mistral.ai/), [Perplexity](https://www.perplexity.ai/), [OpenRouter](https://openrouter.ai/), [LiteLLM](https://docs.litellm.ai/).
 - **Google Gemini**: Google also provides an OpenAI-compatible endpoint for Gemini models.
   - **Endpoint**: `https://generativelanguage.googleapis.com/v1beta/openai/`
-  - **Key**: Use your Gemini API key from [Google AI Studio](https://aistudio.google.com/).
+  - **Key**: Use your Gemini API key from [Google AI Studio](https://aistudio.google.com/) or Vertex AI.
 
 ---
 
