--- a/docs/getting-started/quick-start/starting-with-ollama.mdx
+++ b/docs/getting-started/quick-start/starting-with-ollama.mdx
@@ -77,6 +77,26 @@ This method is perfect if you want to skip navigating through the Admin Settings
 
 ---
 
+## Using Reasoning / Thinking Models
+
+If you're using reasoning models like **DeepSeek-R1** or **Qwen3** that output thinking/reasoning content in `<think>...</think>` tags, you'll need to configure Ollama with a **reasoning parser** for proper display.
+
+### Configure the Reasoning Parser
+
+Start Ollama with the `--reasoning-parser` flag:
+
+```bash
+ollama serve --reasoning-parser deepseek_r1
+```
+
+This ensures that thinking blocks are properly separated from the final answer and displayed in a collapsible section in Open WebUI.
+
+:::tip
+The `deepseek_r1` parser works for most reasoning models, including Qwen3. If you encounter issues, see our [Reasoning Models Troubleshooting Guide](/troubleshooting/reasoning-models) for alternative parsers and detailed troubleshooting steps.
+:::
+
+---
+
 ## All Set!
 
 That’s it! Once your connection is configured and your models are downloaded, you’re ready to start using Ollama with Open WebUI. Whether you’re exploring new models or running your existing ones, Open WebUI makes everything simple and efficient.
