--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -22,7 +22,7 @@ Any provider that offers an OpenAI-compatible endpoint can be used with Open Web
 There are many servers and tools that expose an OpenAI-compatible API. Pick whichever suits your workflow:
 
 - **Local Runners**: [Llama.cpp](https://github.com/ggml-org/llama.cpp), [Ollama](https://ollama.com/), [LM Studio](https://lmstudio.ai/), [LocalAI](https://localai.io/), [Docker Model Runner](https://docs.docker.com/ai/model-runner/), [Lemonade](https://lemonade-server.ai/).
-- **Cloud Providers**: [Groq](https://groq.com/), [Mistral AI](https://mistral.ai/), [Perplexity](https://www.perplexity.ai/), [OpenRouter](https://openrouter.ai/), [LiteLLM](https://docs.litellm.ai/).
+- **Cloud Providers**: [Groq](https://groq.com/), [Mistral AI](https://mistral.ai/), [Perplexity](https://www.perplexity.ai/), [MiniMax](https://platform.minimax.io/), [OpenRouter](https://openrouter.ai/), [LiteLLM](https://docs.litellm.ai/).
 - **Google Gemini**: Google also provides an OpenAI-compatible endpoint for Gemini models.
   - **Endpoint**: `https://generativelanguage.googleapis.com/v1beta/openai/`
   - **Key**: Use your Gemini API key from [Google AI Studio](https://aistudio.google.com/) or Vertex AI.
