group sharing update

--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -118,7 +118,7 @@ Native Mode can be enabled at two levels:
 
 #### Model Requirements & Caveats
 - **Recommended Models**: High-tier models like **GPT-5**, **Claude 4.5 Sonnet**, **Gemini 3 Flash**, and **MiniMax M2.1** excel in Native Mode.
-- **Local Model Warning**: While large local models (e.g., Qwen 3 32B) support native tool calling, **small local models (<= 8B parameters)** often struggle with Native Mode. They may produce malformed JSON or fail to follow the strict state management required for sequential calls. For these models, **Default Mode** is usually more reliable.
+- **Local Model Warning**: While large local models (e.g., Qwen 3 32B) support native tool calling, **small local models** often struggle with Native Mode. They may produce malformed JSON or fail to follow the strict state management required for sequential calls. For these models, **Default Mode** is usually more reliable.
 
 | Feature | Default Mode | Native Mode |
 |:---|:---|:---|
