--- a/docs/features/plugin/tools/development.mdx
+++ b/docs/features/plugin/tools/development.mdx
@@ -157,7 +157,7 @@ When **Native Mode** is enabled, Open WebUI automatically injects built-in syste
 | `web_search` | Performs a search using the configured Search Engine. | `ENABLE_WEB_SEARCH` enabled. |
 | `fetch_url` | Visits a URL and extracts text content via the Web Loader. | Part of Web Search feature. |
 | **Image Gen** | | |
-| `generate_image` | Generates a new image based on a prompt. | `ENABLE_IMAGE_GENERATION` enabled. |
+| `generate_image` | Generates a new image based on a prompt (supports `steps`). | `ENABLE_IMAGE_GENERATION` enabled. |
 | `edit_image` | Edits an existing image based on a prompt and URL. | `ENABLE_IMAGE_EDIT` enabled.|
 | **Memory** | | |
 | `memory_query` | Searches the user's personal memory/personalization bank. | Memory feature enabled. |
